--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prismicio/next": "^2.2.0",
     "@prismicio/react": "^3.3.0",
     "next": "16.0.10",
+    "next-view-transitions": "^0.3.5",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
