--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@prismicio/client": "^7.21.3",
     "@prismicio/next": "^2.2.0",
     "@prismicio/react": "^3.3.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "clsx": "^2.1.1",
+    "gsap": "^3.14.2",
     "next": "16.0.10",
     "next-view-transitions": "^0.3.5",
+    "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "tailwind": "^4.0.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
